--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script>src="vue.js"</script>
+    <script src="vue.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
-    
+    <div id="app">
+        <p>{{ message }}</p>
+    </div> 
+    <script src="client.js"></script>
+
 </body>
 </html>
