--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div id="app">
         <p>{{ message }}</p>
+        <input v-model="inputPractice">
+        <p>{{inputPractice}}</p>
     </div> 
     <script src="client.js"></script>
 
